very minor fixes to alignment

--- a/raspberry-backend/static/css/style_v3.css
+++ b/raspberry-backend/static/css/style_v3.css
@@ -10315,6 +10315,7 @@ html, body {
 #logo{ height:var(--top-height); }
 #chart-area{ fill:white; }
 .fa-w-16{ width:95px;height:95px;}
+.fa-w-15{ width:85px;height:85px;}
 .path-icon{ fill:rgb(31,71,147); }
 .path-icon-alarm{ fill:red; }
 .transparent{ fill:none;fill-opacity:1.0; }
